# aws-genai-conversational-rag-reference

./: .eslintrc.json  .gitattributes  .gitignore  .ncurc.json  .nxignore  .prettierrc.json  .projenrc.ts  .syncpackrc.json  HEADER  LICENSE-THIRD-PARTY  NOTICE  README.md  approved-licenses.yaml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prerequisite-check.sh  selected-options.json  tsconfig.dev.json  tsconfig.json
.projen/: deps.json  (+2 more)
docs/: mkdocs.yml  pyproject.toml
docs/content/: .pages.yml
docs/content/_/: abbreviations.md  news-feed.md  wip.md
docs/content/_/aws-genai-llm-chatbot/: mention.md
docs/content/_/disclaimer/: prompt-engineering-template.md  third-party-model.md
docs/content/architecture/: index.md
docs/content/architecture/core/: index.md
docs/content/design/: .pages.yml
docs/content/design/genai/: .pages.yml  index.md
docs/content/development/: .pages.yml  index.md
docs/content/development/api/: index.md
docs/content/development/chat/: index.md
docs/content/development/chat-dev-settings/: .pages.yml  index.md
docs/content/development/cicd/: index.md
docs/content/development/cli/: index.md
docs/content/development/corpus/: index.md
docs/content/development/design/: index.md
docs/content/development/dev-settings/: index.md
docs/content/development/docs/: index.md
docs/content/development/models/: bedrock-models.md  index.md  predefined-models.md
docs/content/infrastructure/: index.md
docs/content/overview/: .pages.yml  index.md  quick-start.md
docs/scripts/: build.sh  get-deps.sh  serve.sh
(+370 files in other folders)
