[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
mkdocs = ">=1.4.3,<1.5.0"
pymdown-extensions = ">=10.0"
pygments = ">=2.12"
mkdocs-awesome-pages-plugin = ">=2.9.1,<2.10.0"
mkdocs-material = ">=9.1.15,<9.2.0"
mkdocs-redirects = ">=1.2.0,<1.3.0"
mkdocs-git-revision-date-plugin = ">=0.3.2,<0.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
