[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
mkdocs = ">=1.5.0,<2"
mkdocs-awesome-pages-plugin = "^2.9.2"
mkdocs-git-revision-date-plugin = "^0.3.2"
mkdocs-glightbox = "^0.3.4"
mkdocs-material = "^9.4.1"
mkdocs-redirects = "^1.2.1"
pymdown-extensions = "^10.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
